<resources>
    <string name="app_name">Yatzy</string>
    <string name="noNameWarning">All names must be at least 1 character!</string>
    <string name="whoIsPlaying">%1$s is playing</string>
    <string name="tap_die_to_reroll">Tap dice to select for re-roll</string>
    <string name="reRoll">Re-roll</string>
    <string name="save">Save</string>

    <string name="ones">Ones</string>
    <string name="twos">Twos</string>
    <string name="threes">Threes</string>
    <string name="fours">Fours</string>
    <string name="fives">Fives</string>
    <string name="sixes">Sixes</string>
    <string name="onePair">One pair</string>
    <string name="twoPairs">Two Pairs</string>
    <string name="threeOfAKind">3 of a kind</string>
    <string name="fourOfAKind">4 of a kind</string>
    <string name="fullHouse">Full house</string>
    <string name="smallStraight">Small straight</string>
    <string name="largeStraight">Large straight</string>
    <string name="chance">Chance</string>
    <string name="yatzy">Yatzy</string>

    <string name="results">Results</string>
    <string name="noMoreRolls">You already did your 3 rolls!</string>
    <string name="start_again">Start again!</string>
    <string name="roll_dice">Roll!</string>
    <string name="playAgain">Play again!</string>
    <string name="done">Done!</string>
    <string name="getReady">Get ready %1$s</string>
    <string name="rollDice">Roll dice!</string>
    <string name="continueString">Continue</string>
    <string name="enterNames">Enter player names</string>
    <string name="startGame">Start game!</string>
    <string name="player">Player</string>
    <string name="score">Score</string>
    <string name="playerName"></string>
    <string name="totalScore">%1$s</string>
    <string name="sum">Sum</string>
    <string name="bonus">Bonus</string>
    <string name="total">Total</string>
    <string name="scoreBox" />
    <string name="howManyPlayers">How many players?</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="playerOne">Player 1</string>
    <string name="NameHint">Name</string>
    <string name="saveFirst">You need to save first!</string>
    <string name="rollDiceFirst">Roll your dice first!</string>
    <string name="youAlreadySaved">You have already saved!</string>
    <string name="highscore">Highscore</string>
    <string name="winner">Winner</string>
    <string name="newHighscore">New highscore!</string>
    <string name="howToPlay">How to play Yatzy!</string>
    <string name="instructions1">The first thing you do is tap Roll to roll your 5 dice. </string>
    <string name="instructions2">You now have two more rolls where you can roll any or all your dice. Select which dice to roll by tapping them, then tap Roll.</string>
    <string name="instructions3">Your goal is to get a combination that gives you a good score for any row. You can do the rows in any order so adapt to what you get on the first roll.</string>
    <string name="instructions4">After your three rolls you hopefully have a good combo. Tap Save on any row. You can change your mind as many times you like but once you tap Done there´s no going back!</string>
    <string name="instructions5">Only the dice that correlate to the row you´re selecting will give you points. Yatzy is 50 points regardless of value, as long as they all are the same. Chance saves the points of all dice without restrictions.</string>
    <string name="instructions6">If things didn´t go as planned, you still must save a row. Even if it scores you no points.</string>
    <string name="instructions7">Getting 63 or more points in the upper section (ones - sixes) will give you a 50 point bonus!</string>
    <string name="tapAnywhere">Tap anywhere to return to the game</string>
    <string name="showTop10">Show Top 10</string>
    <string name="topTen">Top 10</string>
    <string name="back">Back</string>
</resources>