<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageViewRollHand"
        android:layout_width="323dp"
        android:layout_height="389dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/roll_dice" />

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="277dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/yatzy_logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/carter_one"
        android:text="@string/howManyPlayers"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/threePlayersTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/onePlayerTextView"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/carter_one"
        android:onClick="start1"
        android:text="@string/one"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/twoPlayersTextView"
        app:layout_constraintEnd_toStartOf="@+id/twoPlayersTextView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/twoPlayersTextView"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/carter_one"
        android:onClick="start2"
        android:text="@string/two"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/threePlayersTextView"
        app:layout_constraintEnd_toStartOf="@+id/threePlayersTextView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/onePlayerTextView" />

    <TextView
        android:id="@+id/threePlayersTextView"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/carter_one"
        android:onClick="start3"
        android:text="@string/three"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/showTopTenMainTextView"
        app:layout_constraintEnd_toStartOf="@+id/fourPlayersTextView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/twoPlayersTextView" />

    <TextView
        android:id="@+id/fourPlayersTextView"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/carter_one"
        android:onClick="start4"
        android:text="@string/four"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/threePlayersTextView"
        app:layout_constraintEnd_toStartOf="@+id/fivePlayersTextView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/threePlayersTextView" />

    <TextView
        android:id="@+id/fivePlayersTextView"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/carter_one"
        android:onClick="start5"
        android:text="@string/five"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/fourPlayersTextView"
        app:layout_constraintEnd_toStartOf="@+id/sixPlayersTextView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fourPlayersTextView" />

    <TextView
        android:id="@+id/sixPlayersTextView"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/carter_one"
        android:onClick="start6"
        android:text="@string/six"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/fivePlayersTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fivePlayersTextView" />

    <TextView
        android:id="@+id/showTopTenMainTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/carter_one"
        android:onClick="addTopTenFragment"
        android:text="@string/showTop10"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/containerMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>